Item alignment fixed

--- a/public/sass/public.scss
+++ b/public/sass/public.scss
@@ -140,6 +140,7 @@
                     display: flex;
                     flex-direction: row;
                     padding-left: 8px;
+                    align-items: center;
                 }
             }
         }
